--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -18,7 +18,7 @@ env_specs:
       - flake8
       - fonttools
       - geckodriver
-      - jupyterlab >=1.2.2,<1.3
+      - jupyterlab >=2,<2.1.0a0
       - nodejs
       - python >=3.7,<3.8.0a0
       - robotframework-lint
