--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - flake8
   - fonttools
   - geckodriver
-  - jupyterlab >=1.2.2,<1.3
+  - jupyterlab >=2,<2.1.0a0
   - nodejs
   - python >=3.7,<3.8.0a0
   - robotframework-lint
