--- a/packages/_meta/package.json
+++ b/packages/_meta/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@deathbeds/META-jupyterlab-fonts",
-  "version": "0.7.0",
+  "version": "1.0.0",
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.7.0",
-    "@deathbeds/jupyterlab-font-anonymous-pro": "^0.7.0",
-    "@deathbeds/jupyterlab-font-dejavu-sans-mono": "^0.7.0",
-    "@deathbeds/jupyterlab-font-fira-code": "^0.7.0"
+    "@deathbeds/jupyterlab-fonts": "file:../jupyterlab-fonts",
+    "@deathbeds/jupyterlab-font-anonymous-pro": "file:../jupyterlab-font-anonymous-pro",
+    "@deathbeds/jupyterlab-font-dejavu-sans-mono": "file:../jupyterlab-font-dejavu-sans-mono",
+    "@deathbeds/jupyterlab-font-fira-code": "file:../jupyterlab-font-fira-code"
   }
 }
