--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -16,7 +16,7 @@
   },
   "description": "Fira Code Fonts for JupyterLab",
   "files": [
-    "{lib,style}/*.{d.ts,js,css}",
+    "{lib,style,src}/*.{d.ts,js,css,ts,tsx,js.map}",
     "{README.md,LICENSE}"
   ],
   "jupyterlab": {
