--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -5,11 +5,11 @@
   },
   "peerDependencies": {
     "@deathbeds/jupyterlab-fonts": "^1.0.0",
-    "@jupyterlab/application": "2"
+    "@jupyterlab/application": "~2.0.2"
   },
   "devDependencies": {
     "dejavu-fonts-ttf": "2.37.3",
-    "@jupyterlab/application": "2"
+    "@jupyterlab/application": "~2.0.2"
   },
   "description": "Dejavu Sans Mono Fonts for JupyterLab",
   "files": [
