--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -5,14 +5,14 @@
   },
   "peerDependencies": {
     "@deathbeds/jupyterlab-fonts": "^1.0.0",
-    "@jupyterlab/application": "2"
+    "@jupyterlab/application": "~2.0.2"
   },
   "dependencies": {
     "firacode": "^2.0.0"
   },
   "devDependencies": {
     "@deathbeds/jupyterlab-fonts": "^1.0.0",
-    "@jupyterlab/application": "2"
+    "@jupyterlab/application": "~2.0.2"
   },
   "description": "Fira Code Fonts for JupyterLab",
   "files": [
