--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "json-schema-to-typescript": "^8.2.0",
+    "lerna": "^3.19.0",
+    "prettier": "^1.19.1",
     "rimraf": "~2.6.2",
-    "typescript": "~3.7.2",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "lerna": "^3.13.2",
-    "prettier": "^1.18.2",
-    "tslint": "^5.15.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.0.0"
+    "tslint-react": "^4.1.0",
+    "typescript": "~3.7.2",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.0"
   },
   "private": true,
   "scripts": {
