--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "clean": "jlpm clean:lib && jlpm clean:test",
     "clean:lib": "lerna exec --parallel -- rimraf lib",
     "clean:test": "rimraf _testoutput",
-    "lab:build": "jupyter lab build",
-    "lab:link": "lerna exec --scope '@deathbeds/jupyterlab-*' -- jupyter labextension install . --no-build",
+    "lab:build": "jupyter lab build --debug --dev-build=False --minimize=True",
+    "lab:link": "jupyter labextension install --no-build packages/jupyterlab-*",
     "lint": "jlpm lint:py && jlpm lint:ts && jlpm lint:sh",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
     "lint:robot": "python -m robot.tidy --inplace tests/{acceptance,resources}/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
