--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -4,10 +4,10 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "^1.0.0",
     "@jupyterlab/application": "~2.0.2"
   },
   "dependencies": {
+    "@deathbeds/jupyterlab-fonts": "*",
     "typeface-anonymous-pro": "^0.0.54"
   },
   "devDependencies": {
