--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -4,12 +4,13 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "^1.0.0",
     "@jupyterlab/application": "~2.0.2"
   },
   "devDependencies": {
-    "dejavu-fonts-ttf": "2.37.3",
-    "@jupyterlab/application": "~2.0.2"
+    "dejavu-fonts-ttf": "2.37.3"
+  },
+  "dependencies": {
+    "@deathbeds/jupyterlab-fonts": "*"
   },
   "description": "Dejavu Sans Mono Fonts for JupyterLab",
   "files": [
