try some other install stuff

--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -7,6 +7,8 @@ commands:
     unix: bash postBuild
   demo:
     unix: ./scripts/build_demo.sh && ./scripts/serve_demo.py
+  lab:clean:
+    unix: jupyter lab clean --all
 
 env_specs:
   jupyterlab-fonts-dev:
