--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   },
   "private": true,
   "scripts": {
-    "bootstrap": "jlpm || jlpm || jlpm && jlpm lint && jlpm bootstrap:py && jlpm bootstrap:js && jlpm bootstrap:lab",
+    "bootstrap": "jlpm || jlpm || jlpm && jlpm lint && jlpm bootstrap:js",
     "bootstrap:js": "jlpm lerna bootstrap && jlpm build",
-    "bootstrap:lab": "jlpm lab:link && jlpm lab:build",
-    "bootstrap:py": "python -m pip install -e . --no-deps --ignore-installed",
     "build": "jlpm build:schema && lerna run prebuild && jlpm build:ts",
     "build:ts": "cd packages && cd _meta && tsc -b",
     "build:schema": "lerna run build:schema",
@@ -28,8 +26,6 @@
     "clean": "jlpm clean:lib && jlpm clean:test",
     "clean:lib": "lerna exec --parallel -- rimraf lib",
     "clean:test": "rimraf _testoutput",
-    "lab:build": "jupyter lab build --debug --dev-build=False --minimize=True",
-    "lab:link": "jupyter labextension install --no-build packages/jupyterlab-*",
     "lint": "jlpm lint:py && jlpm lint:ts && jlpm lint:sh",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
     "lint:robot": "python -m robot.tidy --inplace tests/{acceptance,resources}/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
