--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,3 @@
-printWidth: 88
-semi: true
-singleQuote: true
-
-overrides:
-  - files: "*.ts"
-    options:
-      arrowParens: always
-      trailingComma: es5
-  - files: "*.css"
-    options:
-      singleQuote: false
+{
+  "singleQuote": true
+}
