--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -3,15 +3,10 @@
   "bugs": {
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
-  "peerDependencies": {
-    "@jupyterlab/application": "~2.0.2"
-  },
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "*",
+    "@jupyterlab/application": "~2.0.2",
+    "@deathbeds/jupyterlab-fonts": "1",
     "typeface-anonymous-pro": "^0.0.54"
-  },
-  "devDependencies": {
-    "@jupyterlab/application": "~2.0.2"
   },
   "description": "Anonymous Pro Fonts for JupyterLab",
   "files": [
