--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -5,8 +5,10 @@
   },
   "dependencies": {
     "@jupyterlab/application": "~2.0.2",
-    "@deathbeds/jupyterlab-fonts": "1",
     "typeface-anonymous-pro": "^0.0.54"
+  },
+  "peerDependencies": {
+    "@deathbeds/jupyterlab-fonts": "1"
   },
   "description": "Anonymous Pro Fonts for JupyterLab",
   "files": [
