--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -7,7 +7,9 @@
     "dejavu-fonts-ttf": "2.37.3"
   },
   "dependencies": {
-    "@jupyterlab/application": "~2.0.2",
+    "@jupyterlab/application": "~2.0.2"
+  },
+  "peerDependencies": {
     "@deathbeds/jupyterlab-fonts": "1"
   },
   "description": "Dejavu Sans Mono Fonts for JupyterLab",
