--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha0",
   "dependencies": {
     "jss-preset-default": "^4.5.0",
     "jss": "^9.8.7",
