--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint:prettier": "prettier --write *.json *.md *.yml && prettier --write 'packages/**/*.{ts,tsx,css,json,md}'",
     "lint:tslint": "tslint --fix -c tslint.json --project tsconfigbase.json 'packages/**/*{.ts,.tsx}'",
     "test": "jlpm test:robot",
-    "test:robot": "python -m robot -d _testoutput tests/acceptance",
+    "test:robot": "python -m robot -d _testoutput -X tests/acceptance",
     "watch:schema": "jlpm lerna run watch:schema --parallel",
     "watch": "cd packages/_meta && tsc -b -w"
   },
