[wip] Adds support for JupyterLab 2.x (#19)
* back to compiling

* more work on files for debugging

* fix another version

* more version work

* remove lumino deps altogether

* strict null checking

* try some more version work

* try some other install stuff

* try more version things

* back to peering

* add custom build scripts for now

* fix missing lumino prefix

* fix more lumino prefixes

* global editor passing again

* clobber some old console.logs

* linting, all tests pass

* fix license viewing

* add an alpha tag, changelog

* work on icons

* clean up icons in test

--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "json-schema-to-typescript": "^8.2.0",
+    "lerna": "^3.19.0",
+    "prettier": "^1.19.1",
     "rimraf": "~2.6.2",
-    "typescript": "~3.5.1",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "lerna": "^3.13.2",
-    "prettier": "^1.18.2",
-    "tslint": "^5.15.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.0.0"
+    "tslint-react": "^4.1.0",
+    "typescript": "~3.7.2",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.0"
   },
   "private": true,
   "scripts": {
-    "bootstrap": "jlpm || jlpm || jlpm && jlpm lint && jlpm bootstrap:py && jlpm bootstrap:js && jlpm bootstrap:lab",
+    "bootstrap": "jlpm || jlpm || jlpm && jlpm lint && jlpm bootstrap:js",
     "bootstrap:js": "jlpm lerna bootstrap && jlpm build",
-    "bootstrap:lab": "jlpm lab:link && jlpm lab:build",
-    "bootstrap:py": "python -m pip install -e . --no-deps --ignore-installed",
     "build": "jlpm build:schema && lerna run prebuild && jlpm build:ts",
     "build:ts": "cd packages && cd _meta && tsc -b",
     "build:schema": "lerna run build:schema",
@@ -27,17 +26,15 @@
     "clean": "jlpm clean:lib && jlpm clean:test",
     "clean:lib": "lerna exec --parallel -- rimraf lib",
     "clean:test": "rimraf _testoutput",
-    "lab:build": "jupyter lab build",
-    "lab:link": "lerna exec --scope '@deathbeds/jupyterlab-*' -- jupyter labextension install . --no-build",
     "lint": "jlpm lint:py && jlpm lint:ts && jlpm lint:sh",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
-    "lint:robot": "python -m robot.tidy --inplace tests/{acceptance,resources}/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
+    "lint:robot": "python -m robot.tidy --inplace tests/**/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
     "lint:sh": "beautysh -i 2 postBuild",
     "lint:ts": "jlpm lint:prettier && jlpm lint:tslint",
     "lint:prettier": "prettier --write *.json *.md *.yml && prettier --write 'packages/**/*.{ts,tsx,css,json,md}'",
     "lint:tslint": "tslint --fix -c tslint.json --project tsconfigbase.json 'packages/**/*{.ts,.tsx}'",
     "test": "jlpm test:robot",
-    "test:robot": "python -m robot -d _testoutput tests/acceptance",
+    "test:robot": "python -m robot -d _testoutput -X tests/acceptance",
     "watch:schema": "jlpm lerna run watch:schema --parallel",
     "watch": "cd packages/_meta && tsc -b -w"
   },
