--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -2,11 +2,15 @@ name: jupyterlab-fonts-dev
 
 commands:
   lab:
-    unix: jupyter lab --no-browser --debug
+    unix: python -m scripts.lab
   postBuild:
     unix: bash postBuild
-  demo:
-    unix: ./scripts/build_demo.sh && ./scripts/serve_demo.py
+  lab:clean:
+    unix: jupyter lab clean --all
+  lab:watch:
+    unix: python -m scripts.watch
+  lab:build:
+    unix: python -m scripts.build
 
 env_specs:
   jupyterlab-fonts-dev:
@@ -18,7 +22,7 @@ env_specs:
       - flake8
       - fonttools
       - geckodriver
-      - jupyterlab >=1.2.2,<1.3
+      - jupyterlab >=2,<2.1.0a0
       - nodejs
       - python >=3.7,<3.8.0a0
       - robotframework-lint
