--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -3,17 +3,18 @@
   "bugs": {
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
-  "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.7.0",
-    "@jupyterlab/application": "1"
-  },
   "devDependencies": {
-    "dejavu-fonts-ttf": "2.37.3",
-    "@jupyterlab/application": "1"
+    "dejavu-fonts-ttf": "2.37.3"
+  },
+  "dependencies": {
+    "@jupyterlab/application": "~2.0.2"
+  },
+  "peerDependencies": {
+    "@deathbeds/jupyterlab-fonts": "1"
   },
   "description": "Dejavu Sans Mono Fonts for JupyterLab",
   "files": [
-    "{lib,style}/**/*.{d.ts,js,css,woff2}",
+    "{lib,style,src}/**/*.{d.ts,js,css,woff2,ts,tsx,js.map}",
     "{README.md,LICENSE}",
     "vendor/dejavu-fonts-ttf/LICENSE"
   ],
@@ -33,7 +34,7 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "0.7.0",
+  "version": "1.0.0-alpha0",
   "scripts": {
     "prebuild": "python scripts/convert.py"
   }
