--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -3,20 +3,16 @@
   "bugs": {
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
-  "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.7.0",
-    "@jupyterlab/application": "1"
-  },
   "dependencies": {
+    "@jupyterlab/application": "~2.0.2",
     "firacode": "^2.0.0"
   },
-  "devDependencies": {
-    "@deathbeds/jupyterlab-fonts": "^0.7.0",
-    "@jupyterlab/application": "1"
+  "peerDependencies": {
+    "@deathbeds/jupyterlab-fonts": "1"
   },
   "description": "Fira Code Fonts for JupyterLab",
   "files": [
-    "{lib,style}/*.{d.ts,js,css}",
+    "{lib,style,src}/*.{d.ts,js,css,ts,tsx,js.map}",
     "{README.md,LICENSE}"
   ],
   "jupyterlab": {
@@ -35,5 +31,5 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "0.7.0"
+  "version": "1.0.0-alpha0"
 }
