--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -26,9 +26,7 @@
   "dependencies": {
     "jss-preset-default": "^4.5.0",
     "jss": "^9.8.7",
-    "@jupyterlab/application": "~2.0.2",
-    "@jupyterlab/mainmenu": "~2.0.2",
-    "@jupyterlab/notebook": "~2.0.2"
+    "@jupyterlab/application": "2"
   },
   "jupyterlab": {
     "extension": "lib/extension.js",
