--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -24,9 +24,9 @@ env_specs:
       - geckodriver
       - jupyterlab >=2,<2.1.0a0
       - nodejs
-      - python >=3.7,<3.8.0a0
+      - python >=3.8,<3.9.0a0
       - robotframework-lint
       - robotframework-seleniumlibrary
     channels:
       - conda-forge
-      - defaults
+      - conda-forge/label/jupyterlab_rc
