--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -4,7 +4,7 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "dependencies": {
-    "@jupyterlab/application": "~2.0.2",
+    "@jupyterlab/application": "2",
     "typeface-anonymous-pro": "^0.0.54"
   },
   "peerDependencies": {
@@ -32,5 +32,5 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "1.0.0-alpha0"
+  "version": "1.0.0"
 }
