--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -7,7 +7,7 @@
     "dejavu-fonts-ttf": "2.37.3"
   },
   "dependencies": {
-    "@jupyterlab/application": "~2.0.2"
+    "@jupyterlab/application": "2"
   },
   "peerDependencies": {
     "@deathbeds/jupyterlab-fonts": "1"
@@ -34,7 +34,7 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "1.0.0-alpha0",
+  "version": "1.0.0",
   "scripts": {
     "prebuild": "python scripts/convert.py"
   }
