--- a/.yarnrc
+++ b/.yarnrc
@@ -1,2 +1,5 @@
+yarn-offline-mirror "./.yarn-packages"
+yarn-offline-mirror-pruning true
 ignore-optional true
-registry "https://registry.npmjs.org"
+network-timeout "300000"
+disable-self-update-check true
