--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "devDependencies": {
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "json-schema-to-typescript": "^8.2.0",
     "lerna": "^3.19.0",
-    "prettier": "^1.19.1",
-    "rimraf": "~2.6.2",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.1.0",
-    "typescript": "~3.7.2",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.0"
+    "prettier": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "typescript": "~4.3.2"
   },
   "private": true,
   "prettier": {
     "singleQuote": true,
     "printWidth": 88,
-    "proseWrap": "always"
+    "proseWrap": "always",
+    "semi": true
   },
   "scripts": {
     "bootstrap": "jlpm || jlpm || jlpm && jlpm lint && jlpm bootstrap:js",
