--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -4,11 +4,12 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
   "dependencies": {
-    "@jupyterlab/application": "2",
-    "typeface-anonymous-pro": "^0.0.54"
+    "@jupyterlab/application": "~3.1",
+    "typeface-anonymous-pro": "^1.1.13",
+    "@deathbeds/jupyterlab-fonts": "~2.0"
   },
-  "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "1"
+  "devDependencies": {
+    "@jupyterlab/builder": "~3.1"
   },
   "description": "Anonymous Pro Fonts for JupyterLab",
   "files": [
@@ -17,7 +18,14 @@
     "vendor/anonymous-pro/LICENSE"
   ],
   "jupyterlab": {
-    "extension": true
+    "extension": "lib/plugin.js",
+    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-font-anonymous-pro",
+    "sharedPackages": {
+      "@deathbeds/jupyterlab-fonts": {
+        "bundled": false,
+        "singleton": true
+      }
+    }
   },
   "keywords": [
     "jupyter",
@@ -32,5 +40,5 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "1.0.0"
+  "version": "2.0.0"
 }
