--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -22,21 +22,22 @@
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
   "types": "lib/index.d.ts",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "dependencies": {
-    "jss-preset-default": "^4.5.0",
-    "jss": "^9.8.7",
-    "@jupyterlab/application": "2",
-    "@jupyterlab/mainmenu": "2",
-    "@jupyterlab/notebook": "2"
+    "jss-preset-default": "^10.7.1",
+    "jss": "^10.7.1",
+    "@jupyterlab/application": "~3.1",
+    "@jupyterlab/mainmenu": "~3.1",
+    "@jupyterlab/notebook": "~3.1"
   },
   "jupyterlab": {
-    "extension": "lib/extension.js",
-    "schemaDir": "schema"
+    "extension": "lib/plugin.js",
+    "schemaDir": "schema",
+    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-fonts"
   },
   "devDependencies": {
-    "@types/jss": "^9.5.3",
-    "watch": "^1.0.2"
+    "@types/jss": "^10.0.0",
+    "@jupyterlab/builder": "~3.1"
   },
   "scripts": {
     "build:schema": "json2ts schema/fonts.json --strictIndexSignatures | prettier --config=../../.prettierrc --stdin --stdin-filepath src/_schema.d.ts > src/_schema.d.ts",
