--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -1,21 +1,35 @@
 {
-  "author": "Dead Pixels Collective",
+  "name": "@deathbeds/jupyterlab-font-fira-code",
+  "version": "1.0.0",
+  "description": "Fira Code Fonts for JupyterLab",
+  "keywords": [
+    "jupyter",
+    "jupyterlab",
+    "jupyterlab-extension"
+  ],
   "bugs": {
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
   },
-  "dependencies": {
-    "@jupyterlab/application": "~3.1",
-    "firacode": "^5.2.0",
-    "@deathbeds/jupyterlab-fonts": "~2.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
-  "devDependencies": {
-    "@jupyterlab/builder": "~3.1"
-  },
-  "description": "Fira Code Fonts for JupyterLab",
+  "license": "BSD-3-Clause",
+  "author": "Dead Pixels Collective",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "{lib,style,src}/*.{d.ts,js,css,ts,tsx,js.map}",
     "{README.md,LICENSE}"
   ],
+  "dependencies": {
+    "@deathbeds/jupyterlab-fonts": "~2.0",
+    "@jupyterlab/application": "~3.1",
+    "firacode": "^5.2.0"
+  },
+  "devDependencies": {
+    "@jupyterlab/builder": "~3.1"
+  },
   "jupyterlab": {
     "extension": "lib/plugin.js",
     "outputDir": "../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-font-fira-code",
@@ -25,19 +39,5 @@
         "singleton": true
       }
     }
-  },
-  "keywords": [
-    "jupyter",
-    "jupyterlab",
-    "jupyterlab-extension"
-  ],
-  "license": "BSD-3-Clause",
-  "main": "lib/index.js",
-  "name": "@deathbeds/jupyterlab-font-fira-code",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
-  },
-  "types": "lib/index.d.ts",
-  "version": "1.0.0"
+  }
 }
