--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -1,48 +1,48 @@
 {
-  "author": "Dead Pixels Collective",
-  "bugs": {
-    "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
-  },
+  "name": "@deathbeds/jupyterlab-fonts",
+  "version": "2.0.0",
   "description": "Code Fonts for JupyterLab",
-  "files": [
-    "{lib,style,schema,src}/**/*.{d.ts,js,css,svg,json,ts,tsx,js.map}",
-    "{LICENSE,README.md}"
-  ],
   "keywords": [
     "jupyter",
     "jupyterlab",
     "fonts",
     "jupyterlab-extension"
   ],
-  "license": "BSD-3-Clause",
-  "main": "lib/index.js",
-  "name": "@deathbeds/jupyterlab-fonts",
+  "bugs": {
+    "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
   },
+  "license": "BSD-3-Clause",
+  "author": "Dead Pixels Collective",
+  "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "version": "2.0.0",
-  "dependencies": {
-    "jss-preset-default": "^10.7.1",
-    "jss": "^10.7.1",
-    "@jupyterlab/application": "~3.1",
-    "@jupyterlab/mainmenu": "~3.1",
-    "@jupyterlab/notebook": "~3.1"
-  },
-  "jupyterlab": {
-    "extension": "lib/plugin.js",
-    "schemaDir": "schema",
-    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-fonts"
-  },
-  "devDependencies": {
-    "@jupyterlab/builder": "~3.1"
-  },
+  "files": [
+    "{lib,style,schema,src}/**/*.{d.ts,js,css,svg,json,ts,tsx,js.map}",
+    "{LICENSE,README.md}"
+  ],
   "scripts": {
     "build:schema": "json2ts schema/fonts.json --strictIndexSignatures | prettier --config=../../.prettierrc --stdin --stdin-filepath src/_schema.d.ts > src/_schema.d.ts",
     "prebuild": "jlpm build:schema && jlpm copy:schema",
     "copy:schema": "mkdir -p lib && cp src/_schema.d.ts lib/",
     "watch": "tsc -w",
     "watch:schema": "watch 'jlpm build:schema' schema"
+  },
+  "dependencies": {
+    "@jupyterlab/application": "~3.1",
+    "@jupyterlab/mainmenu": "~3.1",
+    "@jupyterlab/notebook": "~3.1",
+    "jss": "^10.7.1",
+    "jss-preset-default": "^10.7.1"
+  },
+  "devDependencies": {
+    "@jupyterlab/builder": "~3.1"
+  },
+  "jupyterlab": {
+    "extension": "lib/plugin.js",
+    "schemaDir": "schema",
+    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-fonts"
   }
 }
