--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "json-schema-to-ts": "^1.6.4",
     "lerna": "^3.19.0",
     "prettier": "^2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
