--- a/packages/jupyterlab-font-anonymous-pro/tsconfig.json
+++ b/packages/jupyterlab-font-anonymous-pro/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src",
-    "tsBuildInfoFile": "lib/.tsbuildinfo"
+    "rootDir": "src"
   },
   "include": ["src/**/*"],
   "references": [
