--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -31,8 +31,8 @@
     "@jupyterlab/builder": "~3.1"
   },
   "jupyterlab": {
-    "extension": "lib/plugin.js",
-    "outputDir": "../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-font-fira-code",
+    "extension": true,
+    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-font-fira-code",
     "sharedPackages": {
       "@deathbeds/jupyterlab-fonts": {
         "bundled": false,
