more work towards packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,59 @@
+[metadata]
+long_description = file: ./README.md
+long_description_content_type = text/markdown
+license_file = LICENSE
+classifiers =
+    Development Status :: 4 - Beta
+    Framework :: Jupyter
+    Framework :: Jupyter
+    Framework :: Jupyter :: JupyterLab :: 3
+    Framework :: Jupyter :: JupyterLab :: Extensions
+    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
+    License :: OSI Approved :: BSD License
+    Programming Language :: Python
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+
+[options]
+python_requires = >=3.6
+package_dir =
+    = src
+
+packages = find:
+include_package_data = True
+zip_safe = False
+
+install_requires =
+    jupyterlab ==3.*
+
+[options.packages.find]
+where =
+    src
+
 [flake8]
+exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
 max-line-length = 88
+ignore = E203
+
+[tool:pytest]
+junit_family=xunit2
+script_launch_mode = subprocess
+addopts =
+    -vv
+    --tb long
+    --pyargs jupyterlab_fonts
+    --cov jupyterlab_fonts
+    --cov-branch
+    --cov-report term-missing:skip-covered
+    --cov-report html
+
+[isort]
+combine_as_imports = True
+include_trailing_comma = True
+line_length = 88
+multi_line_output = 3
