--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
+    "url": "https://github.com/deathbeds/jupyterlab-fonts"
   },
   "license": "BSD-3-Clause",
   "author": "Dead Pixels Collective",
