--- a/packages/_meta/package.json
+++ b/packages/_meta/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "watch": "jlpm build --watch --preserveWatchOutput"
   },
   "dependencies": {
     "@deathbeds/jupyterlab-font-anonymous-pro": "file:../jupyterlab-font-anonymous-pro",
