--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -20,3 +20,5 @@ dependencies:
   - robotframework-lint
   - robotframework-jupyterlibrary
   - firefox =78
+  # demo toys
+  - jupyterlab-link-share
